fix(publish): address review on #306 — per-catalog location delete + clearAutomatically
- HIGH: scope the MERGE location delete by each item's OWN catalogId (group by
  catalogId) instead of the publishing catalogId, so Phase 3 cross-catalog items
  are handled correctly (was latent: Phase 3 only merges offers, not geometry).
- MEDIUM: add @Modifying(clearAutomatically = true) to both location DELETE queries
  so the persistence context can't retain stale location entities across the
  delete -> re-insert in one transaction.
- LOW: remove unused ItemId import in MultiLocationIntegrationTest.